# qml4

./: CMakeLists.txt  test.qml
qml/: CMakeLists.txt  moc_small_object.cxx  plugin.cpp  plugin.h  small_object.cpp
